--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -41,6 +41,7 @@ h6 { font-size: 1rem; }
     @include box-shadow(none);
     font-weight: 600;
     text-transform: uppercase;
+    position: relative;
 }
 
 // lead text
