--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -248,7 +248,7 @@
             position: relative;
             padding: $spacer*0.5;
             font-size: $font-size-base;
-            color: #fff;
+            color: #ccc;
             text-transform: uppercase;
 
             &:before {
